# youtube-toolkit

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MIGRATION.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  EXTENDING.md
docs/blueprints/: overview.html  plan.md
docs/blueprints/thoughts/: README.md
docs/codebase-map/: index.html
docs/plans/: 2026-06-17-nav-deep-module-refactor.md  2026-06-17-tier3-api-convergence-and-typing.md
examples/: README.md  advanced_captions_examples.py  advanced_comments_examples.py  advanced_features_examples.py  advanced_search_examples.py  youtube_agent_example.py
src/youtube_toolkit/: api.py  sub_apis.py
src/youtube_toolkit/core/: __init__.py  comments.py  dict_access.py  download.py  post_processors.py  video_info.py
src/youtube_toolkit/core/captions/: __init__.py  analytics.py  convert.py
src/youtube_toolkit/handlers/: pytubefix_handler.py  scrapetube_handler.py  youtube_api_handler.py  yt_dlp_handler.py
src/youtube_toolkit/services/: __init__.py  analyze.py  captions.py  channel.py  comments.py  download.py  playlist.py  system.py
src/youtube_toolkit/utils/: anti_detection.py  helpers.py  request_interceptor.py
tests/: test_channel_features.py  test_dict_access.py  test_fallback.py  test_new_api.py  test_parallel_download.py  test_toolkit.py
youtube_toolkit/: __init__.py  api.py  sub_apis.py
youtube_toolkit/core/: fallback.py  search.py
youtube_toolkit/core/captions/: models.py
youtube_toolkit/handlers/: yt_dlp_handler.py
youtube_toolkit/services/: __init__.py  analyze.py  captions.py  comments.py  download.py  get_info.py  playlist.py  search.py
youtube_toolkit/utils/: deprecation.py
